Fix alignment of Park Events in Events tab to center

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -67,6 +67,7 @@ nav a:visited {
     width: 100%;
     height: 700px;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 /* About Us Section */
@@ -77,6 +78,10 @@ nav a:visited {
     text-align: center;
 }
 
+#about-header {
+    font-size: 180%;
+}
+
 #who {
     width: 30%;
     float: left;
@@ -84,13 +89,12 @@ nav a:visited {
 
 #what {
     width: 30%;
-    display: inline-block;
+    float: left;
 }
 
 #why {
     width: 30%;
-    float: right;
-    display: block;
+    float: left;
 }
 
 .about-box {
@@ -113,6 +117,7 @@ nav a:visited {
 
 footer {
     text-align: center;
+    clear:both;
 }
 
 #social li {
@@ -157,24 +162,24 @@ footer {
 }
 
 /* Events Page */
+
+section > h2 {
+    text-align: center;
+    clear: both;
+    margin-top: 10px;
+}
+
 img {
-    width: 60%;
-    height: 60%;
-    padding: 10px;
+    width: 220px;
+    height: 220px;
 }
 
-#Marlay {
-    width: 25%;
+.event {
+    width: 28%;
     float: left;
+    margin: 2%;
 }
 
-#Bushy {
-    width: 25%;
-    display: inline-block;
-}
-
-#Cabinteely {
-    width: 25%;
-    float: right;
-    display: block;
+#event-section {
+    text-align: center;
 }
